# Somnium

./: .gitignore  DEPLOYMENT_GUIDE.md  FRONTEND_SECURITY.md  HIPAA_COMPLIANCE.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_PERSISTENCE_IMPLEMENTATION.md  TESTING_GUIDE.md  package-lock.json  restart-nextjs.sh  test-proxy-v2.sh
somnium-frontend/: .gitignore  README.md  components.json  next.config.ts  package-lock.json  package.json
somnium-frontend/src/: middleware.ts
somnium-frontend/src/app/: layout.tsx  page.tsx
somnium-frontend/src/app/auth/: page.tsx
somnium-frontend/src/app/dashboard/: layout.tsx  not-found.tsx  page.tsx
somnium-frontend/src/app/unauthorized/: page.tsx
somnium-frontend/src/hooks/: use-csrf.ts  use-session-restore.ts  use-session-validator.ts  use-sse.ts  use-token-refresh.ts  use-valid-auth.ts
somnium-frontend/src/lib/: security.ts
somnium-frontend/src/server/: context.ts  trpc.ts
somnium-frontend/src/stores/: auth-store.ts  ui-store.ts
somnium_backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini
somnium_backend/alembic/: env.py
somnium_backend/alembic/versions/: 22fe8fb63c97_add_security_fields_audit_logging_and_.py  6f2869acd76c_add_email_domain_to_hospitals.py  c9bebfff3a8f_add_patient_and_patient_vitals_tables.py  ea152404eb83_add_hospital_model_and_link_to_users.py
somnium_backend/app/: main.py
somnium_backend/app/core/: audit.py  config.py  database.py  events.py  exceptions.py  security.py  validators.py
somnium_backend/app/dependencies/: __init__.py
somnium_backend/app/domain/auth/: hospitals_data.py  models.py  router.py  schemas.py  service.py
somnium_backend/app/domain/patients/: __init__.py  models.py  router.py  schemas.py  service.py
somnium_backend/scripts/: reset_and_seed_users.py  seed_patients_vitals.py  seed_users.py
somnium_backend/tests/: test_sse_manager.py
(+31 files in other folders)
