[project]
name = "somnium-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "fastapi-csrf-protect>=1.0.7",
    "imbalanced-learn>=0.11.0",
    "joblib>=1.3.0",
    "numba>=0.59.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "shap>=0.46.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.45",
    "sse-starlette>=3.1.1",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
]
